--- a/01_document/03_regresion/03_regresion.tex
+++ b/01_document/03_regresion/03_regresion.tex
@@ -142,7 +142,7 @@ Una vez generadas las simulaciones, se evaluó para cada escenario (cuantil y tam
 
 \subsection{Resultados}
 
-En las figuras posteriores se muestran la evaluación del rendimiento del modelo de regresión cuantílica con censura intervalar, de acuerdo a los criterios expuestos anteriormente. Observamos lo siguiente:
+En las figuras \ref{fig:ses}, \ref{fig:ecm}, y \ref{fig:cob} se muestran la evaluación del rendimiento del modelo de regresión cuantílica con censura intervalar, de acuerdo a los criterios expuestos anteriormente. Observamos lo siguiente:
 
 \begin{itemize}
 
@@ -152,7 +152,7 @@ En las figuras posteriores se muestran la evaluación del rendimiento del modelo 
 	\item En relación a la cobertura, se observa que, para todos los tamaños de muestra, los parámetros establecidos en la sección precedente se encuentran aproximadamente el 95\% de las veces dentro del intervalo de confianza generado.
 
 	\item En relación al error cuadrático medio, se observa que, para un tamaño de muestra pequeño, el error es considerable para todos los parámetros. No obstante, esto disminuye drásticamente en la medida que el tamaño de muestra aumenta.
-
+c
 \end{itemize}
 
 
