--- a/01_document/04_real data/04_real data.tex
+++ b/01_document/04_real data/04_real data.tex
@@ -1,6 +1,6 @@
 \chapter{Aplicación en datos reales}
 
-El presente capítulo presenta una aplicación del modelo de regresión cuantílica para datos intervalares en datos reales. Para tal fin, se utilizará la Encuesta Nacional de Satisfacción de Usuarios del Aseguramiento Universal en Salud (ENSUSALUD) la cual ha sido generada por el Instituto Nacional de Estadística e Informática del Perú (INEI). En dicha aplicación, se evaluará el efecto de cada covariable en la variable respuesta a lo largo de todos los cuantiles. 
+El presente capítulo presenta una aplicación del modelo de regresión cuantílica para datos intervalares en un conjunto de datos reales. Para tal fin, se utilizará la Encuesta Nacional de Satisfacción de Usuarios del Aseguramiento Universal en Salud (ENSUSALUD) la cual ha sido generada por el Instituto Nacional de Estadística e Informática del Perú (INEI). En dicha aplicación, se evaluará el efecto de cada covariable en la variable respuesta a lo largo de todos los cuantiles. 
 
 \section{ENSUSALUD 2015}
 Conforme el Convenio de Cooperación Interinstitucional Nª 017-2013-INEI, el INEI y la Superintendencia Nacional de Aseguramiento en Salud (SUNASA) acordaron en implementar y ejecutar la encuesta de satisfacción en salud el año 2015. Dicha encuesta es una investigación estadística, cuyo objetivo es <<evaluar el grado de satisfacción de los usuarios internos y externos de los servicios de salud>> \cite{inei:ensusalud}. Al respecto, dicha encuesta comprende como unidad muestral a los usuarios de consulta externa, bóticas y farmacias, seguros, y profesionales de la salud. Los usuarios y profesionales han sido atendidos o forman parte del conjunto de establecimientos del Ministerio de Salud (MINSA), Seguro Social de Salud (EsSalud), Clínicas privadas y Establecimientos de Sanidad de las Fuerzas Armadas y Policiales.
