--- a/01_document/04_real data/04_real data.tex
+++ b/01_document/04_real data/04_real data.tex
@@ -41,7 +41,7 @@ Se ajustó el modelo de regresión cuantílica para datos con censura intervalar a 
 
 La categoría de referencia para el presente estudio es un médico hombre, que trabaja en el instituto MINSA-GR y cuenta con especialidad (C2P13), realiza labor asistencial en otra institución, y realiza labor docente remunerada (C2P26). Al respecto, se observa lo siguiente:
 \begin{itemize}
-	\item Para cada uno de los cuantiles de la variable respuesta, se observa que una médico mujer tendría un decremento entre $\beta = [-0.05, -0.11]; e^{\beta}-1 = [-0.11,-0.06]$ en relación a sus pares varones. El efecto se acentúa en mayor medida en el cuantil 0.9 de la variable respuesta.
+	\item Para cada uno de los cuantiles de la variable respuesta, se observa que una médico mujer tendría un decremento entre 11\% a 6\% ($\beta = [-0.05, -0.11]; e^{\beta}-1 = [-0.11,-0.06]$) en relación a sus pares varones. El efecto se acentúa en mayor medida en el cuantil 0.9 de la variable respuesta.
 	\item Para ciertos cuantiles, y tomando en cuenta la categoría de referencia, cambiar de la institución MINSA-GR a las instituciones FF.AA. / PN o Clínicas Privadas tiene como consecuencia un decremento en el sueldo. No obstante, se observa que ello podría no tener efecto para estos cuantiles, pues los intervalos de confianza contienen el 0.
 	\item A lo largo de todos los cuantiles de la variable respuesta, existe un marcado efecto negativo en tanto el médico no realice labor asistencial en otra institución o no realice labor docente remunerada.
 \end{itemize}
