--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -117,3 +117,12 @@
  number  	  = {4},
  year		  = {2019}
 }
+
+@article{self:grossman,
+  author          = {Self, Steven G. and Grossman, Elizabeth A.},
+  title           = {Linear Rank Tests for Interval-Censored Data with Applications to PCB Levels in Adipose Tissue of Transformer Repair Workers},
+  journal         = {Biometrics},
+  volume          = {42},
+  number          = {3},
+  year            = {1986}
+}
