--- a/01_document/03_regresion/03_regresion.tex
+++ b/01_document/03_regresion/03_regresion.tex
@@ -1,5 +1,5 @@
 	\chapter{Modelo de regresión cuantílica para datos positivos}
-	El presente capítulo tiene como objetivo especificar el modelo de regresión cuantílica para datos positivos con censura intervalar. Asimismo, detallamos la estimación de los parámetros desde la perspectiva de inferencia clásica.
+	El presente capítulo tiene como objetivo especificar el modelo de regresión cuantílica para datos positivos con censura intervalar. Asimismo, detallamos la estimación de los parámetros desde la perspectiva de la inferencia clásica.
 
 	\section{Datos positivos con censura intervalar}
 	\label{metodo:reg}
@@ -9,49 +9,44 @@
 	\begin{equation}
 	Z = 
 		\begin{cases}
-			1, a_{1}< y < a_{2} \\
+			1, a_{1}< Y < a_{2} \\
 			2, a_{2} \leq Y < a_{3} \\
 			3, a_{3} \leq Y < a_{4} \\
 			\vdots \\
-			K, a_{k} \leq Y < a_{k+1} \\
+			k, a_{k} \leq Y < a_{k+1} \\
 		\end{cases}
 	\end{equation}
 
 	\noindent en dónde $a_1 < a_2 < \cdots <a_{k+1}$. Esto corresponde a los límites del intervalo $I$, con $a_{1}=0$ y $a_{K+1}=\infty$. La \textbf{f.d.p} de la variable observable $Z$ está definida de la siguiente forma:
 	\begin{equation} \label{eq:2}
-		P\left( Z=j \right)=P\left(a_{j} \leq Y < a_{j+1} \right) = F_Y(a_{j+1}) - F_Y(a_{j})
+		P\left( Z=j \right)=P\left(a_{j} \leq Y < a_{j+1} \right) = F_Y(a_{j+1}) - F_Y(a_{j}), j=1,\dotsc,k
 	\end{equation}
 
-	\noindent en dónde $F_Y(\cdot)$ es la función de distribución acumulada de Y. La variable $Z$ que sigue la distribución anteriormente mencionada $Y$ está denotada por 
+	\noindent en dónde $F_Y(\cdot)$ es la función de distribución acumulada de Y. La variable $Z$ que sigue la distribución anteriormente mencionada está denotada por 
 \[Z \sim \text{Categórica}(\boldsymbol{\pi})\]
 
 \noindent donde $\boldsymbol{\pi}=\left( \pi_{1},\dots,\pi_{k}\right)^{T}$y $\pi_{j}=P(Z=j)$.
 
 
-Para efectos de la presente tesis, asumiremos que el proceso de censura de datos es independiente a la variable $Y$. \cite{calle:oller} denomina esto como un proceso no informativo, pues ello indica que el conocimiento de que una observación se encuentra en el intervalo $[a_j,a_{j+1}]$ no precisa información adicional sobre la variable $Y$: solo indica que dicha variable está contenida entre esos límites. Conforme \cite{self:grossman}, esta suposición puede expresarse bajo los siguientes términos:
-
-\begin{equation*}
-f_{Z|Y}(a_{j},a_{j+1}|y_{w}) = f_{Z|Y} (a_{j},a_{j+1}|y_{k}); \{(a_{j},a_{j+1}): y_{w} \in [a_{j},a_{j+1}],y_{k} \in [a_{j},a_{j+1}]\}
-\end{equation*}
-
-Esto quiere decir que dos valores específicos de $Y$, $y_w$ y $y_k$, que se encuentren dentro del intervalo $[a_j,a_{j+1}]$ tienen la misma probabilidad de estar en dicho intervalo.
+Para efectos de la presente tesis, asumiremos que el proceso de censura de datos es independiente a la variable $Y$. \cite{calle:oller} denomina esto como un proceso no informativo, pues ello indica que el conocimiento de que una observación se encuentra en el intervalo $[a_j,a_{j+1}]$ no precisa información adicional sobre la variable $Y$: solo indica que dicha variable está contenida entre esos límites. Conforme \cite{self:grossman}, esta suposición indica que dos valores específicos de $Y$, $y_w$ y $y_k$, que se encuentren dentro del intervalo $[a_j,a_{j+1}]$, tienen la certeza de encontrarse en dicho intervalo.
 
 \section{Función de verosimilitud para datos positivos con censura intervalar}
 
-
-Bajo el contexto presentado anteriormente, y considerando las ideas plasmadas por \cite{gentleman:lmk}, el proceso de censura que deviene en la generación de la variable $Z$ es independiente del proceso generador de datos de $Y$. Por lo tanto, nuestros parámetros de interés, $q_t$ y $\alpha$ no son afectados por otro proceso. Bajo esta suposición, consideramos la verosímilitud de los datos con censura intervalar (es decir, los datos directamente observables) de la forma:
-
-\begin{equation}
-	L(\boldsymbol{\theta}) = \prod_{j=1}^{n} \prod_{i=1}^{k} \pi_{ij}^{\mathbb{I}(Z_{i}=j)}
-\end{equation}
-
-\noindent en dónde $\boldsymbol{\theta} = [q_t, \alpha]^{T}$. Considerando los resultados identificados en la ecuación \ref{eq:2}, la verosímilitud de la estructura observada de los datos es de la forma:
+Bajo el contexto presentado anteriormente, y considerando las ideas plasmadas por \cite{gentleman:lmk}, el proceso de censura que deviene en la generación de la variable $Z$ es independiente del proceso generador de datos de $Y$. Por lo tanto, la estimación de los parámetros que definen la distribución de $Y$, denotados por $\boldsymbol{\theta} = [q_t, \alpha]^{t}$ , no es afectado por el proceso de censura. Bajo esta suposición, consideramos la verosímilitud de los datos con censura intervalar (es decir, los datos directamente observables) de la forma:
 
 \begin{equation}
-	L(\boldsymbol{\theta}) = \prod_{j=1}^{n}(F_Y(a_{j+1}) - F_Y(a_{j})) 
+	L(\boldsymbol{\theta}) = \prod_{i=1}^{n} \prod_{j=1}^{k} \pi_{j}^{\mathbb{I}(Z_{i}=j)}
 \end{equation}
 
-Bajo este criterio, la verosímilitud solo depende de los valores extremos del intervalo $[a_j,a_{j+1}]$ y de la \textbf{f.d.a.} de la variable latente $Y$. Para hallar los puntos óptimos de la verosímilitud, utilizaremos el método de optimización de Nelder-Mead, implementado en la rutina \textit{optim} del lenguaje de programación R. En la siguiente sección, adaptaremos el 
+\noindent Considerando los resultados identificados en la ecuación \ref{eq:2}, la verosímilitud de la estructura observada de los datos es de la forma:
+
+\begin{equation}
+	L(\boldsymbol{\theta}) = \prod_{i=1}^{n}(F_Y(l_{i}) - F_Y(u_{i})) 
+\end{equation}
+
+\noindent en dónde $l_i$ y $u_i$ corresponden a los límites inferiores y superiores del intervalo en dónde se encuentra la i-ésima observación.
+
+Bajo este criterio, la verosímilitud solo depende de los valores extremos del intervalo y de la \textbf{f.d.a.} de la variable latente $Y$. 
 
 \section{Modelo de regresión para datos positivos con censura intervalar}
 
@@ -63,65 +58,71 @@ Considerando la reparametrización expuesta en la sección 2, el modelo de regresi
 \noindent en dónde $\boldsymbol{\beta}=\left[ \beta_0,\beta_{1},\dots,\beta_{p} \right]^{T}$ y $x_{i}^{T} =\left[ 1,x_{i1},x_{i2},\dots,x_{ip}, \right]^{T}$. La función $g(\cdot)$ es una función de enlace estrictamente monótona y doblemente diferenciable. En el presente modelo, se utilizará la función de enlace logarítmica. El parámetro $\alpha$, el parámetro $q_{t_{i}}$ y $t$ está definido conforme la sección 2.2. La estimación de los parámetros $\boldsymbol{\beta}$ y $\alpha$ se realizará mediante el método de máxima verosimilitud.
 
 \subsection{Función de verosimilitud}
+\ref{verofunc}
+
 Consideramos que solo conocemos que $Y_{i}$ se encuentra en un intervalo de $K$ posibles intervalos de la forma $[a_{j},a_{j+1}]$ con $a_1 < a_2 < \dots < a_{k+1}$ y que $Z_{i}=j$ denota que $Y_{i} \in [a_{j},a_{j+1}]$. Por lo tanto, considerando los resultados de la sección 3.1, tenemos que
-\[Z_{i} \sim \text{Categórica}(\pi_{i}).\]
-\noindent con $\pi_{i}=\left( \pi_{i1},\dots, \pi_{ik} \right)$ tal que
+
+\[Z_{i} \sim \text{Categórica}(\boldsymbol{\pi}_{i}).\]
+
+\noindent con $\boldsymbol{\pi}_{i}=\left( \pi_{i1},\dots, \pi_{ik} \right)$ tal que
+
 \begin{equation}
-\pi_{ij} = F_{y}(a_{j+1}|q_{t_{i}},\alpha,x) - F_{y}\left(a_{j}|q_{t_{i}},\alpha,x \right)
+\pi_{ij} = F_{Y}(a_{j+1}|q_{t_{i}},\alpha,x) - F_{Y}\left(a_{j}|q_{t_{i}},\alpha,x \right)
 \end{equation}
 
-Entonces la función de verosimilitud de las variables observadas $Z_{1},Z_{2},\dots,Z_{n}$ es dada por lo siguiente:
+\noindent dónde $F_Y(\cdot|\cdot,\cdot,\cdot)$ es la \textbf{f.d.a} de la distribución Weibull reparametrizada dada en 2.3.Entonces la función de verosimilitud de las variables observadas $Z_{1},Z_{2},\dots,Z_{n}$ es dada por lo siguiente:
 
-\[L(\boldsymbol{\theta})=\prod_{i=1}^{n}\prod_{j=1}^{k} \pi_{ij}^{1\left( Z_{i}=j \right)}.\]
+\[L(\boldsymbol{\theta})=\prod_{i=1}^{n}\prod_{j=1}^{k} \pi_{j}^{1\left( Z_{i}=j \right)}.\]
 
-Luego, considerando  [$a_{i_{j}},a_{i_{j+1}}$] como el intervalo dónde $Y_{i}$ fue observado, podemos escribir la función de verosimilitud como:
+Luego, considerando  [$l_{i},u_{i}$] como el intervalo dónde $Y_{i}$ fue observado, podemos escribir la función de verosimilitud como:
 
-\[L\left( \boldsymbol{\theta}\right)=\prod_{i=1}^{n}\left( F(a_{i_{j+1}}|q_{t_{i}},\alpha,t) - F(a_{i_{j}}|q_{t_{i}},\alpha,t) \right) \]
+\[L\left( \boldsymbol{\theta}\right)=\prod_{i=1}^{n}\left( F(u_{i}|q_{t_{i}},\alpha,t) - F(l_{i}|q_{t_{i}},\alpha,t) \right) \]
 
-\[L(\boldsymbol{\theta})=\sum_{i=1}^{n} \log \left( F(a_{i_{j+1}}|q_{t_{i}},\alpha,t) - F\left( a_{i_{j}}|q_{t_{i}},\alpha,t \right) \right)\]
+\[L(\boldsymbol{\theta})=\sum_{i=1}^{n} \log \left( F(u_{i}|q_{t_{i}},\alpha,t) - F\left( l_{i}|q_{t_{i}},\alpha,t \right) \right)\]
 
-\[L(\boldsymbol{\theta})=\sum_{i}^{n} \log \left( \exp\left( -c(t)\left( \frac{a_{i_{j}}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} - \exp\left( -c(t)\left( \frac{a_{i_{j+1}}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} \right) \right) \right)\]
-\noindent en dónde $c(t)=(-log(1-t))^{\frac{1}{\alpha}}$.
+\[L(\boldsymbol{\theta})=\sum_{i}^{n} \log \left( \exp\left( -c(t)\left( \frac{u_{i}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} - \exp\left( -c(t)\left( \frac{l_{i}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} \right) \right) \right)\]
+\noindent en donde $c(t)=(-log(1-t))^{\frac{1}{\alpha}}$.
 
-Los estimadores de máxima verosimilitud para los parámetros $\alpha$ y $\boldsymbol{\beta}$ se encuentran maximizando la función anteriormente expuesta. Para ello, obtenemos las gradientes de $\alpha$ y $\boldsymbol{\beta}$, se exponen a continuación (asumiendo que $g(\cdot)$ es la función logaritmo):
+Los estimadores de máxima verosimilitud para los parámetros $\alpha$ y $\boldsymbol{\beta}$ se encuentran maximizando la función anteriormente expuesta. Para ello, obtenemos las gradientes de $\alpha$ y $\boldsymbol{\beta}$, que se presentan a continuación (asumiendo que $g(\cdot)$ es la función logaritmo):
 
-\[\frac{\partial L}{\partial \alpha}=\sum_{i=1}^{n} \frac{c(t)}{(\gamma_{i})^{\alpha}(\lambda_{i_{2}}-\lambda_{i_{1}})}\left( (a_{i_{j+1}})^{\alpha} \log\left( \frac{a_{i_{j+1}}}{\gamma_{i}} \right) \lambda_{i_{2}} - (a_{i_{j}})^{\alpha} \log\left( \frac{a_{i_{j+1}}}{\gamma_{i}} \right) \lambda_{i_{1}}\right)\]
+\[\frac{\partial L}{\partial \alpha}=\sum_{i=1}^{n} \frac{c(t)}{(\gamma_{i})^{\alpha}(\lambda_{i_{2}}-\lambda_{i_{1}})}\left( (u_{i})^{\alpha} \log\left( \frac{u_{i}}{\gamma_{i}} \right) \lambda_{i_{2}} - (l_{i})^{\alpha} \log\left( \frac{l_{i}}{\gamma_{i}} \right) \lambda_{i_{1}}\right)\]
 
-\[\frac{\partial L}{\partial \boldsymbol{\beta}_{j}}=\sum_{i=1}^{n} \left(\frac{\alpha c(t) x_{ij}}{(\gamma_{i})^{\alpha}(\lambda_{i_{1}}-\lambda_{i_{2}})}\right) \left( (a_{i_{j}})^{\alpha}\lambda_{i_{1}} - (a_{i_{j+1}})^{\alpha} \lambda_{i_{2}} \right)\]
+\[\frac{\partial L}{\partial \beta_{j}}=\sum_{i=1}^{n} \left(\frac{\alpha c(t) x_{ij}}{(\gamma_{i})^{\alpha}(\lambda_{i_{1}}-\lambda_{i_{2}})}\right) \left( (a_{i_{j}})^{\alpha}\lambda_{i_{1}} - (a_{i_{j+1}})^{\alpha} \lambda_{i_{2}} \right)\]
 \noindent en dónde:
 \[ \gamma_{i} = \exp(\eta_{i})\]
 \[ \eta_{i} = x_{i}^{T}\boldsymbol{\beta}\]
-\[ \lambda_{i_{1}} = \exp\left( -c(t) \left(\frac{a_{i_{j}}}{\gamma_{i}}\right)^{\alpha} \right)\]
-\[ \lambda_{i_{2}} = \exp\left( -c(t) \left(\frac{a_{i_{j+1}}}{\gamma_{i}}\right)^{\alpha} \right)\]
+\[ \lambda_{i_{1}} = \exp\left( -c(t) \left(\frac{l_{i}}{\gamma_{i}}\right)^{\alpha} \right)\]
+\[ \lambda_{i_{2}} = \exp\left( -c(t) \left(\frac{u_{i}}{\gamma_{i}}\right)^{\alpha} \right)\]
 
-Dichos estimadores de máxima verosimilitud, bajo ciertas condiciones de regularidad, son consistentes (es decir, que $\hat{\theta} \rightarrow \theta$ cuando $n \rightarrow \infty$) y asíntoticamente normales con distribución:
+Dichos estimadores de máxima verosimilitud, bajo ciertas condiciones de regularidad, son consistentes (es decir, que $\boldsymbol{\hat{\theta}} \rightarrow \boldsymbol{\theta}$ cuando $n \rightarrow \infty$) y asíntoticamente normales con distribución:
 
-\[\hat{\theta} \sim \mathcal{N}\left(\theta,\mathcal{I}(\hat{\theta})^{-1}\right).\]
+\[\boldsymbol{\hat{\theta}}^{\omega} \sim \mathcal{N}\left(\boldsymbol{\theta},\mathcal{I}(\boldsymbol{\hat{\theta}})^{-1}\right)\]
 
-\noindent cuando $n \rightarrow \infty$. $\mathcal{I}(\hat{\theta})$ es la matriz de información de Fisher observada, la cual en nuestro modelo tiene la estructura:
+\noindent cuando $n \rightarrow \infty$. $\mathcal{I}(\boldsymbol{\hat{\theta}})$ es la matriz de información de Fisher observada, la cual en nuestro modelo tiene la estructura:
 
 \[
+	I(\boldsymbol{\hat{\theta}})=
 \begin{bmatrix}
 
-\frac{\partial L(\boldsymbol{\theta})}{\partial \alpha \partial \alpha ^{T}} & \frac{\partial L(\boldsymbol{\theta})}{\partial \alpha \partial \boldsymbol{\boldsymbol{\beta}}^{T}}\\
+	\frac{\partial L(\boldsymbol{\theta})}{\partial \alpha \partial \alpha ^{T}} & \frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha}\\
 
-\frac{\partial L(\boldsymbol{\theta})}{\partial \alpha \partial \boldsymbol{\beta}^{T}} & \frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \boldsymbol{\beta} ^{T}}
+\frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha} & \frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \boldsymbol{\beta} ^{T}}
 
-\end{bmatrix}\]
+\end{bmatrix} \rvert \boldsymbol{\theta} = \boldsymbol{\hat{\theta}}\]
 
-Los errores estándares de cada coeficiente se estiman a través de dicha matriz de información, denotada por $\mathcal{I}(\hat{\theta})$. Los errores estándares corresponden a la raíz cuadrada de cada elemento de la diagonal. Finalmente, en el marco de la inferencia clásica, los intervalos de confianza para cada parámetro está definido de la forma:
+Los errores estándares de cada coeficiente se estiman a través de dicha matriz de información, denotada por $\mathcal{I}(\boldsymbol{\hat{\theta}})^{-1}$. Los errores estándares corresponden a la raíz cuadrada de cada elemento de la diagonal. Finalmente, en el marco de la inferencia clásica, los intervalos de confianza para cada parámetro está definido de la forma:
 
-\[\hat{\boldsymbol{\theta}_j} \pm z_{1-\frac{\alpha}{2}} C_{jj}.\]
+\[\hat{\theta_j} \pm z_{1-\frac{\alpha}{2}} C_{jj}.\]
 
-\noindent dónde $C_{jj}$ es la raíz del j-ésimo elemento diagonal de $I(\hat{\boldsymbol{\theta}})$
+\noindent dónde $C_{jj}$ es la raíz del j-ésimo elemento diagonal de $I(\hat{\boldsymbol{\theta}})^{-1}$
 
 \section{Simulación de datos}
 
-En esta sección se presenta un estudio de simulación para evaluar si el método descrito en el apartado \ref{metodo:reg} permite recuperar los parámetros propuestos del modelo de censura intervalar para datos positivos. Para ello, se evaluará el desempeño de la simulación mediante tres criterios: el sesgo relativo, el error cuadrático medio y el ratio de cobertura.
+En esta sección se presenta un estudio de simulación para evaluar si el método descrito en \ref{verofunc} permite recuperar los parámetros propuestos del modelo de censura intervalar para datos positivos. Para ello, se evaluará el desempeño de la simulación mediante tres criterios: el sesgo relativo, el error cuadrático medio y el ratio de cobertura.
 
 \subsection{Metodología para la simulación de datos}
 
-La presente sección tiene como objetivo realizar un estudio de simulación en el que se evalúe el adecuado la adecuada estimación del modelo propuesto. Esto comprende generar una base de datos en dónde se tenga una variable aleatoria $Y_i \sim W_r(q_t, \alpha,t)$, la cual está subyace la variable censurada $Z$ que sigue lo denotado en la sección 3.1. Asimismo, dicha base de datos contiene otras variables simuladas, las cuales actuarán como variables independientes en un contexto de regresión. El objetivo principal del estudio de simulación evaluar si el método de estimación planteado, permite recuperar adecuadamente los parámetros de regresión establecidos anteriormente. Los criterios sobre los cuales se analizará la estimación del modelo son: sesgo relativo, error cuadrático medio y cobertura.
+La presente sección tiene como objetivo realizar un estudio de simulación en el que se evalúe la adecuada estimación del modelo propuesto. Para ello, se generará un conjunto de datos dónde cada observación sigue la distribución $Y_i \sim W_r(q_t, \alpha,t)$. Luego, cada una de estas observaciones serán censuradas dando como resultado la variable $Z_i$, la cual sigue lo explicado en la sección 3.1. Asimismo, dicha base de datos contiene otras variables simuladas, las cuales actuarán como variables independientes en un contexto de regresión. El objetivo principal del estudio de simulación evaluar si el método de estimación planteado, permite recuperar adecuadamente los parámetros de regresión establecidos anteriormente. Los criterios sobre los cuales se analizará la estimación del modelo son: sesgo relativo, error cuadrático medio y cobertura.
 
 El proceso de simulación consiste en generar $5.000$ réplicas para cada tamaño de muestra de $n=\{100, 500, 1.000\}$. Simularemos la variable respuesta $Y_{i} \sim W_r(Q_{t_{i}},\alpha,t)$ considerando 3 covariables $X_{1i},X_{2i},X_{3i}$ que serán simuladas como:
 \[X_{1i} \sim N(2,0.25)\]
@@ -130,18 +131,18 @@ El proceso de simulación consiste en generar $5.000$ réplicas para cada tamaño d
 
 Conforme lo mencionado en la sección 3.2.1, $q_{t_{i}} =  \exp(x_i^T \boldsymbol{\beta})$, en dónde $\boldsymbol{\beta} =[7, 0.3, 0.84, 2.5]^T$ y $x_{i}=(1,X_{1i},X_{2i},X_{3i})^{T}$. Por otro lado, el parámetro de dispersión tomará el valor $\alpha = 2$. Finalmente, se realizará la evaluación por los cuantiles $t = [0.1, 0.2, \dots, 0.9]$.
 
-Se asume que $Y_i \sim W_r(q_{ti}, \alpha,t)$ se observa con censura intervalar. En este estudio asumiremos que solo observamos una variable $Z$ que particiona la variable $Y_i$ en intervalos de igual amplitud, con la excepción del último intervalo, el cual tiene la estructura $[a_{j}, \infty)$. Una vez generada dicha variable, se realiza el modelamiento de la variable con censura intervalar sobre las variables independientes creadas previamente. El objetivo final es, a través del modelo, estimar los coeficientes $\boldsymbol{\beta}$ definidos previamente.
+Se asume que $Y_i \sim W_r(q_{ti}, \alpha,t)$ se observa con censura intervalar. En este estudio asumiremos que solo observamos una variable $Z$ que particiona la variable $Y_i$ en intervalos de igual amplitud, con la excepción del último intervalo, el cual tiene la estructura $[a_{j}, \infty)$. Una vez generada dicha variable, se realiza el modelamiento de la variable con censura intervalar sobre las variables independientes creadas previamente. El objetivo final es, a través del método de máxima verosímilitud, estimar los coeficientes $\boldsymbol{\beta}$ definidos previamente.
 
 \subsection{Implementación del modelo}
 
-La implementación del modelo se realizó a través del lenguaje de programación R, tomando en consideración las definiciones presentadas en el capítulo 3 de la presente tesis. El seudocódigo de la implementación se encuentra en el Apéndice.
+La implementación del modelo se realizó a través del lenguaje de programación R, tomando en consideración las definiciones presentadas en el capítulo 3 de la presente tesis. El pseudocódigo de la implementación se encuentra en el Apéndice.
 
 Una vez generadas las simulaciones, se evaluó para cada escenario (cuantil y tamaño de muestra) los siguientes indicadores:
-\[ \hat{\text{Sesgo relativo:}} \frac{1}{M}(\hat{\theta_j} - \theta)\]
-\[ \hat{\text{ECM:} \frac{1}{M}} \sum_1^M (\hat{\theta_j} - \theta)^2 \]
-\[ \hat{\text{Cobertura:} \frac{1}{M}} \sum_1^M (\hat{\theta_j} - \theta)^2 \]
+\[ \hat{\text{Sesgo relativo:}} \frac{1}{M}\sum_{j=1}^{M}(\hat{\theta_j} - \theta)\]
+\[ \hat{\text{ECM:} \frac{1}{M}} \sum_{j=1}^M (\hat{\theta_j} - \theta)^2 \]
+\[ \hat{\text{Cobertura:} \frac{1}{M}} \sum_{j=1}^M \mathcal{I}(\boldsymbol{\theta} \in IC_{j})\]
 
-\noindent dónde $\theta$ es el verdadero valor del parámetro, $\hat{\theta}_{j}$ la estimación obtenida en la j-ésima réplica y M el número de réplicas.
+\noindent dónde $\theta$ es el verdadero valor del parámetro, $\hat{\theta}_{j}$ la estimación obtenida en la $j$-ésima réplica y M el número de réplicas. $IC_j$ es el intervalo de confianza al 95\% obtenido en la $j$-ésima réplica.
 
 \subsection{Resultados}
 
@@ -155,7 +156,7 @@ En las figuras \ref{fig:ses}, \ref{fig:ecm}, y \ref{fig:cob} se muestran la eval
 	\item En relación a la cobertura, se observa que, para todos los tamaños de muestra, los parámetros establecidos en la sección precedente se encuentran aproximadamente el 95\% de las veces dentro del intervalo de confianza generado.
 
 	\item En relación al error cuadrático medio, se observa que, para un tamaño de muestra pequeño, el error es considerable para todos los parámetros. No obstante, esto disminuye drásticamente en la medida que el tamaño de muestra aumenta.
-c
+
 \end{itemize}
 
 
